move files with .shtml prefix to .html
The days when server side includes were in use are over.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/second.html
+++ b/second.html
@@ -33,27 +33,27 @@
   <p><a href="http://www.iki.fi/kerolasa/">My contact information</a><br /></p>
 
   <p><a href="thaimaa.html">Thaimaan lomamatka</a><br />
-  <a href="matka2003.shtml">Autoloma it&auml;euroopassa</a><br />
+  <a href="matka2003.html">Autoloma it&auml;euroopassa</a><br />
   <a href="matka2004/">Mukamatkojen oopperamatka</a><br />
-  <a href="matti.shtml">Matti Nyk&auml;nen - El&auml;m&auml; on
+  <a href="matti.html">Matti Nyk&auml;nen - El&auml;m&auml; on
   laiffia</a><br />
-  <a href="falafel.shtml">Falafel</a><br />
-  <a href="lettu.shtml">Perunalettu</a><br />
+  <a href="falafel.html">Falafel</a><br />
+  <a href="lettu.html">Perunalettu</a><br />
   <a href="lp.html">Lastensuojelua ja sensuuria</a><br />
-  <a href="lasagna.shtml">Lasagna recipe</a></p>
+  <a href="lasagna.html">Lasagna recipe</a></p>
 
   <p><a href="differences.html">Mitigating the Obfuscation
   Circumscribing the Three Primary Unix Shells</a><br />
-  <a href="load.shtml">What system load means</a><br />
+  <a href="load.html">What system load means</a><br />
   <a href="filetimes.html">What are atime, ctime and
   mtime?</a><br />
-  <a href="defunct.shtml">How to kill defunct (zombie)
+  <a href="defunct.html">How to kill defunct (zombie)
   process</a><br />
   <a href="HOWTO-Basic-Debugging.html">Basic Debugging
   HOWTO</a><br />
-  <a href="dotcommand.shtml">What difference dot command and
+  <a href="dotcommand.html">What difference dot command and
   executable scripts has</a><br />
-  <a href="was/index.shtml">WebSphere Application Server stop /
+  <a href="was/index.html">WebSphere Application Server stop /
   start script</a><br />
   <a href="number2numerum.sh">Script converting number
   to english numeral</a><br />
