remove few links
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/second.html
+++ b/second.html
@@ -62,8 +62,6 @@
   </p>
 
   <p><a class="out" href="http://dhcpd-pools.sourceforge.net/">My
-  SourceForge project dhcpd-pools</a><br />
-  <a class="out" href="http://ut3.org/">UT3</a><br />
-  <a class="out" href="http://www.rajatsi.fi/">Rajatsi Ry</a></p>
+  SourceForge project dhcpd-pools</a></p>
 </body>
 </html>
