add link to logger(1) page
A bit of text about syslog RFC5424 format, systemd integration, etc.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/second.html
+++ b/second.html
@@ -45,6 +45,7 @@
   <p><a href="differences.html">Mitigating the Obfuscation
   Circumscribing the Three Primary Unix Shells</a><br />
   <a href="load.html">What system load means</a><br />
+  <a href="logger.html">He's a logger(1), and he's okay</a><br />
   <a href="filetimes.html">What are atime, ctime and
   mtime?</a><br />
   <a href="defunct.html">How to kill defunct (zombie)
