--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ FDE9B739</a></td>
 <p><a href="second.html">Second page</a>.</p>
 <p><a href='http://www.linkedin.com/in/kerolasa'><img alt=
 'Linkedin' src='linkedin.png' width='80' height='15' /></a>
-<a href='https://www.ohloh.net/accounts/kerolasa'><img alt='Ohloh'
-src='ohloh.png' width='80' height='15' /></a> <a href=
+<a href='https://www.openhub.net/accounts/kerolasa'><img alt='Open Hub'
+src='openhub.png' width='80' height='15' /></a> <a href=
 'http://www.ratebeer.com/View-User-110452.htm'><img alt='Ratebeer'
 src='ratebeer.png' width='68' height='15' /></a><br />
 <a onmouseover="self.status='Valid XHTML 1.0!'; return true" href=
