add width and height to qr.png
This should speed up rendering.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -83,12 +83,13 @@ FDE9B739</a></td>
 </tr>
 </table>
 </div>
-<p><img src='qr.png' alt='contact info QR code' /></p>
+<p><img src='qr.png' height="200" width="200" alt=
+'contact info QR code' /></p>
 <p><a href="second.html">Second page</a>.</p>
 <p><a href='http://www.linkedin.com/in/kerolasa'><img alt=
 'Linkedin' src='linkedin.png' width='80' height='15' /></a>
-<a href='https://www.openhub.net/accounts/kerolasa'><img alt='Open Hub'
-src='openhub.png' width='80' height='15' /></a> <a href=
+<a href='https://www.openhub.net/accounts/kerolasa'><img alt=
+'Open Hub' src='openhub.png' width='80' height='15' /></a> <a href=
 'http://www.ratebeer.com/View-User-110452.htm'><img alt='Ratebeer'
 src='ratebeer.png' width='80' height='15' /></a><br />
 <a onmouseover="self.status='Valid XHTML 1.0!'; return true" href=
