add mime type markup to favicon link
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta name="revisit-after" content="15" />
 <meta name="robots" content="index, follow" />
 <link type="text/css" rel="stylesheet" href="kerolasa.css" />
-<link rel="shortcut icon" href="kerolasa.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="kerolasa.ico" />
 <title>Sami Kerola</title>
 </head>
 <body>
