--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@ United Kingdom</p>
 </tr>
 </table>
 </div>
-<p><img src='qr.png' height="200" width="200" alt='contact info QR code' /></p>
+<p><img src="qr.png" height="200" width="200" alt="contact info QR code" /></p>
 <p><a href="second.html">Second page.</a></p>
-<p><a href='http://www.linkedin.com/in/kerolasa'><img src='linkedin.png' alt='Linkedin' width='80' height='15' /></a>
-<a href='https://www.openhub.net/accounts/kerolasa'><img src='openhub.png' alt='Open Hub' width='80' height='15' /></a>
-<a href='http://www.ratebeer.com/View-User-110452.htm'><img src='ratebeer.png' alt='Ratebeer' width='80' height='15' /></a><br />
+<p><a href="http://www.linkedin.com/in/kerolasa"><img src="linkedin.png" alt="Linkedin" width="80" height="15" /></a>
+<a href="https://www.openhub.net/accounts/kerolasa"><img src="openhub.png" alt="Open Hub" width="80" height="15" /></a>
+<a href="http://www.ratebeer.com/View-User-110452.htm"><img src="ratebeer.png" alt="Ratebeer" width="80" height="15" /></a><br />
 <a href="http://validator.w3.org/check?uri=referer"><img src="valid-xhtml10.png" alt="Valid XHTML 1.0" height="31" width="88" /></a>
 <a href="http://jigsaw.w3.org/css-validator/"><img src="vcss.png" alt="Valid CSS" height="31" width="88" /></a>
 <a href="http://www.anybrowser.org/campaign/"><img src="bvwab.png" alt="Viewable With Any Browser" height="31" width="88" /></a></p>
