fix web page style
The microdata seems to make indentation effects.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 <p class="where">Work</p>
 <p class="justtext">address<br /></p>
 <p class="address">
-<div itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
+<span itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
 <span itemprop="legalName">lastminute.com</span><br />
 <span itemprop="jobTitle">TVLG Systems Engineering</span><br />
 Sami Kerola<br />
-<div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+<span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
 <span itemprop="streetAddress">77 Hatton Garden</span><br />
 <span itemprop="addressLocality">London</span><br />
 <span itemprop="postalCode">EC1N 8JS</span><br />
 <span itemprop="addressCountry">United Kingdom</span></p>
-</div>
+</span>
 <div class="justtext">
 <table border="0" cellspacing="0" cellpadding="0" summary="work">
 <tr>
@@ -49,18 +49,18 @@ Sami Kerola<br />
 <td>web page</td>
 <td class="pad"><a href="http://www.lastminute.com/" itemprop="url">http://www.lastminute.com/</a></td>
 </tr>
-</div>
+</span>
 </table>
 </div>
 <p class="where">Home</p>
 <p class="justtext">address<br /></p>
 <p class="address"><span itemprop="name">Sami Kerola</span><br />
-<div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+<span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
 <span itemprop="streetAddress">95 Ormiston Grove</span><br />
 <span itemprop="addressLocality">London</span><br />
 <span itemprop="postalCode">W12 0JP</span><br />
 <span itemprop="addressCountry">United Kingdom</span></p>
-</div>
+</span>
 <div class="justtext">
 <table border="0" cellspacing="0" cellpadding="0" summary="home">
 <tr>
