fix errors in structured data
As adviced by Google Structured Data Testing Tool.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <p class="where">Work</p>
 <p class="justtext">address<br /></p>
 <p class="address">
-<span itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
+<span itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
 <span itemprop="legalName">lastminute.com</span><br />
-<span itemprop="jobTitle">TVLG Systems Engineering</span><br />
+<span itemprop="title">TVLG Systems Engineering</span><br />
 Sami Kerola<br />
 <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
 <span itemprop="streetAddress">77 Hatton Garden</span><br />
@@ -57,7 +57,7 @@ Sami Kerola<br />
 <p class="address"><span itemprop="name">Sami Kerola</span><br />
 <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
 <span itemprop="streetAddress">95 Ormiston Grove</span><br />
-<span itemprop="addressLocality">London</span><br />
+<span itemprop="locality">London</span><br />
 <span itemprop="postalCode">W12 0JP</span><br />
 <span itemprop="addressCountry">United Kingdom</span></p>
 </span>
