improve person properties
Reference: https://support.google.com/webmasters/answer/146646?hl=en
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
 <title>Sami Kerola</title>
 </head>
 <body>
-<section itemscope itemtype="http://data-vocabulary.org/Person">
+<section itemscope itemtype="http://schema.org/Person">
 <p class="where">Work</p>
 <p class="justtext">address<br /></p>
 <p class="address">
-<span itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
-<span itemprop="legalName">lastminute.com</span><br />
-<span itemprop="title">TVLG Systems Engineering</span><br />
+<span itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
+<span itemprop="name">lastminute.com</span><br />
 Sami Kerola<br />
 <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
 <span itemprop="streetAddress">77 Hatton Garden</span><br />
@@ -39,7 +38,7 @@ Sami Kerola<br />
 <table border="0" cellspacing="0" cellpadding="0" summary="work">
 <tr>
 <td>email</td>
-<td class="pad"><a href="mailto:sami.kerola@lastminute.com">sami.kerola@lastminute.com</a></td>
+<td class="pad"><a href="mailto:sami.kerola@lastminute.com" itemprop="email">sami.kerola@lastminute.com</a></td>
 </tr>
 <tr>
 <td>mobile</td>
@@ -57,7 +56,7 @@ Sami Kerola<br />
 <p class="address"><span itemprop="name">Sami Kerola</span><br />
 <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
 <span itemprop="streetAddress">95 Ormiston Grove</span><br />
-<span itemprop="locality">London</span><br />
+<span itemprop="addresslocality">London</span><br />
 <span itemprop="postalCode">W12 0JP</span><br />
 <span itemprop="addressCountry">United Kingdom</span></p>
 </span>
@@ -76,6 +75,10 @@ Sami Kerola<br />
 <td class="pad"><a href="http://www.iki.fi/kerolasa/" itemprop="url">http://www.iki.fi/kerolasa/</a></td>
 </tr>
 </table>
+</div>
+<div style="visibility:hidden">
+<span itemprop="jobTitle">system administrator</span>
+<span itemprop="image">http://kerolasa.github.io/me_london.jpg</span>
 </div>
 </section>
 <p><a href="second.html">Second page.</a></p>
