make the page a little be more mobile friendly
Make fonts larger and remove page width.  Reduce also size of a png that
I missed earlier.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link type="text/css" rel="stylesheet" href="kerolasa.css" />
+<link rel="shortcut icon" type="image/x-icon" href="kerolasa.ico" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Sami Kerola" />
 <meta name="classification" content="personal home page" />
 <meta name="contact_addr" content="kerolasa@iki.fi" />
@@ -16,8 +19,6 @@
 <meta name="rating" content="general" />
 <meta name="revisit-after" content="15" />
 <meta name="robots" content="index, follow" />
-<link type="text/css" rel="stylesheet" href="kerolasa.css" />
-<link rel="shortcut icon" type="image/x-icon" href="kerolasa.ico" />
 <title>Sami Kerola</title>
 </head>
 <body>
