inline css for index.html
This should make rendering quicker.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -2,8 +2,45 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict with HTML5 microdata//EN" "xhtml1-strict-with-html5-microdata.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<style xml:space="preserve" type="text/css">
+/*<![CDATA[*/
+BODY {
+font-size: 16px;
+}
+A {
+background: transparent;
+text-decoration: none;
+}
+P.justtext {
+float: none;
+font-size: medium;
+margin-left: 20px;
+}
+DIV.justtext {
+float: none;
+font-size: medium;
+margin-left: 20px;
+}
+P.address {
+float: none;
+font-size: medium;
+margin-left: 45px;
+}
+TABLE {
+float: none;
+font-size: medium;
+}
+P.where {
+float: none;
+font-size: medium;
+font-weight: bold;
+}
+TD.pad {
+text-indent: 5px;
+}
+/*]]>*/
+</style>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link type="text/css" rel="stylesheet" href="kerolasa.css" />
 <link rel="shortcut icon" type="image/x-icon" href="kerolasa.ico" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Sami Kerola" />
