use css sprites for button images
Four round trips less should mean yet another speed up.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -38,6 +38,27 @@ font-weight: bold;
 TD.pad {
 text-indent: 5px;
 }
+P.buttons A {
+height: 31px;
+padding-left: 88px;
+display: inline-block;
+background: url("sprite.png");
+}
+P.buttons A.bvw {
+background-position: 0px 0px;
+}
+P.buttons A.lin {
+background-position: 0px -35px;
+}
+P.buttons A.ope {
+background-position: 0px -60px;
+}
+P.buttons A.rat {
+background-position: 0px -85px;
+}
+P.buttons A.vcs {
+background-position: 0px -116px;
+}
 /*]]>*/
 </style>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -120,10 +141,10 @@ Sami Kerola<br />
 </div>
 </section>
 <p><a href="second.html">Second page.</a></p>
-<p><a href="http://www.linkedin.com/in/kerolasa"><img src="linkedin.png" alt="Linkedin" width="80" height="15" /></a>
-<a href="https://www.openhub.net/accounts/kerolasa"><img src="openhub.png" alt="Open Hub" width="80" height="15" /></a>
-<a href="http://www.ratebeer.com/View-User-110452.htm"><img src="ratebeer.png" alt="Ratebeer" width="80" height="15" /></a><br />
-<a href="http://jigsaw.w3.org/css-validator/"><img src="vcss.png" alt="Valid CSS" height="31" width="88" /></a>
-<a href="http://www.anybrowser.org/campaign/"><img src="bvwab.png" alt="Viewable With Any Browser" height="31" width="88" /></a></p>
+<p class="buttons"><a class="lin" href="http://www.linkedin.com/in/kerolasa"></a>
+<a class="ope" href="https://www.openhub.net/accounts/kerolasa"></a>
+<a class="rat" href="http://www.ratebeer.com/View-User-110452.htm"></a><br />
+<a class="vcs" href="http://jigsaw.w3.org/css-validator/"></a>
+<a class="bvw" href="http://www.anybrowser.org/campaign/"></a></p>
 </body>
 </html>
