--- a/index.html
+++ b/index.html
@@ -2,95 +2,50 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict with HTML5 microdata//EN" "xhtml1-strict-with-html5-microdata.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<style xml:space="preserve" type="text/css">
-/*<![CDATA[*/
-BODY {
-font-size: 16px;
-}
-A {
-background: transparent;
-text-decoration: none;
-}
-P.justtext {
-float: none;
-font-size: medium;
-margin-left: 20px;
-}
-DIV.justtext {
-float: none;
-font-size: medium;
-margin-left: 20px;
-}
-P.address {
-float: none;
-font-size: medium;
-margin-left: 45px;
-}
-TABLE {
-float: none;
-font-size: medium;
-}
-P.where {
-float: none;
-font-size: medium;
-font-weight: bold;
-}
-TD.pad {
-text-indent: 5px;
-}
-P.buttons A {
-height: 31px;
-padding-left: 88px;
-display: inline-block;
-background: url("sprite.png");
-}
-P.buttons A.bvw {
-background-position: 0px 0px;
-}
-P.buttons A.lin {
-background-position: 0px -35px;
-}
-P.buttons A.ope {
-background-position: 0px -60px;
-}
-P.buttons A.rat {
-background-position: 0px -85px;
-}
-P.buttons A.vcs {
-background-position: 0px -116px;
-}
-/*]]>*/
-</style>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="shortcut icon" type="image/x-icon" href="kerolasa.ico" />
+<style xml:space="preserve" type="text/css">BODY{font-size:16px;}
+A{background:transparent;text-decoration:none;}
+P.justtext{float:none;font-size:medium;margin-left:20px;}
+DIV.justtext{float:none;font-size:medium;margin-left:20px;}
+P.address{float:none;font-size:medium;margin-left:45px;}
+TABLE{float:none;font-size:medium;}
+P.where{float:none;font-size:medium;font-weight:bold;}
+TD.pad{text-indent:5px;}
+P.buttons A{height:31px;padding-left:88px;display:inline-block;background:url("sprite.png");}
+P.buttons A.bvw{background-position:0px 0px;}
+P.buttons A.lin{background-position:0px -35px;}
+P.buttons A.ope{background-position:0px -60px;}
+P.buttons A.rat{background-position:0px -85px;}
+P.buttons A.vcs{background-position:0px -116px;}</style>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<link rel="shortcut icon" type="image/x-icon" href="kerolasa.ico"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="author" content="Sami Kerola" />
-<meta name="classification" content="personal home page" />
-<meta name="contact_addr" content="kerolasa@iki.fi" />
-<meta name="copyright" content="Copyright Sami Kerola" />
-<meta name="description" content="Sami Kerola's home page and contact information" />
-<meta name="distribution" content="global" />
-<meta name="abstract" content="Sami Kerola's home page and contact information" />
-<meta name="keywords" content="sami, kerola, kotisivu, homepage, home page, yhteystiedot, contact, information" />
-<meta name="language" content="en" />
-<meta name="owner" content="Sami Kerola" />
-<meta name="rating" content="general" />
-<meta name="revisit-after" content="15" />
-<meta name="robots" content="index, follow" />
+<meta name="author" content="Sami Kerola"/>
+<meta name="classification" content="personal home page"/>
+<meta name="contact_addr" content="kerolasa@iki.fi"/>
+<meta name="copyright" content="Copyright Sami Kerola"/>
+<meta name="description" content="Sami Kerola's home page and contact information"/>
+<meta name="distribution" content="global"/>
+<meta name="abstract" content="Sami Kerola's home page and contact information"/>
+<meta name="keywords" content="sami, kerola, kotisivu, homepage, home page, yhteystiedot, contact, information"/>
+<meta name="language" content="en"/>
+<meta name="owner" content="Sami Kerola"/>
+<meta name="rating" content="general"/>
+<meta name="revisit-after" content="15"/>
+<meta name="robots" content="index, follow"/>
 <title>Sami Kerola</title>
 </head>
 <body>
 <section itemscope itemtype="http://schema.org/Person">
 <p class="where">Work</p>
-<p class="justtext">address<br /></p>
+<p class="justtext">address<br/></p>
 <p class="address">
 <span itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
-<span itemprop="name">lastminute.com</span><br />
-Sami Kerola<br />
+<span itemprop="name">lastminute.com</span><br/>
+Sami Kerola<br/>
 <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-<span itemprop="streetAddress">77 Hatton Garden</span><br />
-<span itemprop="addressLocality">London</span><br />
-<span itemprop="postalCode">EC1N 8JS</span><br />
+<span itemprop="streetAddress">77 Hatton Garden</span><br/>
+<span itemprop="addressLocality">London</span><br/>
+<span itemprop="postalCode">EC1N 8JS</span><br/>
 <span itemprop="addressCountry">United Kingdom</span></p>
 </span>
 <div class="justtext">
@@ -111,12 +66,12 @@ Sami Kerola<br />
 </table>
 </div>
 <p class="where">Home</p>
-<p class="justtext">address<br /></p>
-<p class="address"><span itemprop="name">Sami Kerola</span><br />
+<p class="justtext">address<br/></p>
+<p class="address"><span itemprop="name">Sami Kerola</span><br/>
 <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-<span itemprop="streetAddress">95 Ormiston Grove</span><br />
-<span itemprop="addresslocality">London</span><br />
-<span itemprop="postalCode">W12 0JP</span><br />
+<span itemprop="streetAddress">95 Ormiston Grove</span><br/>
+<span itemprop="addresslocality">London</span><br/>
+<span itemprop="postalCode">W12 0JP</span><br/>
 <span itemprop="addressCountry">United Kingdom</span></p>
 </span>
 <div class="justtext">
@@ -143,7 +98,7 @@ Sami Kerola<br />
 <p><a href="second.html">Second page.</a></p>
 <p class="buttons"><a class="lin" href="http://www.linkedin.com/in/kerolasa"></a>
 <a class="ope" href="https://www.openhub.net/accounts/kerolasa"></a>
-<a class="rat" href="http://www.ratebeer.com/View-User-110452.htm"></a><br />
+<a class="rat" href="http://www.ratebeer.com/View-User-110452.htm"></a><br/>
 <a class="vcs" href="http://jigsaw.w3.org/css-validator/"></a>
 <a class="bvw" href="http://www.anybrowser.org/campaign/"></a></p>
 </body>
