correct meta language
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/filetimes.html
+++ b/filetimes.html
@@ -22,7 +22,7 @@
         <meta name="keywords"
               content="file, times" />
         <meta name="language"
-              content="fi" />
+              content="en" />
         <meta name="owner"
               content="Sami Kerola" />
         <meta name="rating"
