make english falafel recipe to be an html file
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/falafel.html
+++ b/falafel.html
@@ -46,7 +46,7 @@
         </h2>
 	<p>
 	    If you find the following hard to understand try
-	    <a href="falafel.txt">English version</a> instead.
+	    <a href="falafel-en.html">English version</a> instead.
         <p>
             Halkaistuja kik-herneit&#228; 4 dl. Liota pari tuntia.
         </p>
