improve meta descriptions
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/filetimes.html
+++ b/filetimes.html
@@ -14,11 +14,13 @@
         <meta name="copyright"
               content="Copyright (C)2003 Sami Kerola" />
         <meta name="description"
-              content="atime, ctime and mtime" />
+              content="file system timestamps atime, ctime and mtime
+              explained" />
         <meta name="distribution"
               content="global" />
         <meta name="abstract"
-              content="atime, ctime and mtime" />
+              content="file system timestamps atime, ctime and mtime
+              explained" />
         <meta name="keywords"
               content="file, times" />
         <meta name="language"
