--- a/london_pubs.html
+++ b/london_pubs.html
@@ -11,7 +11,7 @@
 <meta name="classification" content="personal home page" />
 <meta name="contact_addr" content="kerolasa@iki.fi" />
 <meta name="copyright" content="Copyright (C)2013 Sami Kerola" />
-<meta name="description" content="Amsterdam pub recommendations" />
+<meta name="description" content="London pub recommendations" />
 <meta name="distribution" content="global" />
 <meta name="abstract" content="London pub recommendations" />
 <meta name="keywords" content=
