--- a/thaimaa.html
+++ b/thaimaa.html
@@ -12,11 +12,11 @@
 
         <meta name="copyright" content="Copyright Sami Kerola" />
 
-        <meta name="description" content="traveling" />
+        <meta name="description" content="thaimaan matka 2002" />
 
         <meta name="distribution" content="global" />
 
-        <meta name="abstract" content="traveling" />
+        <meta name="abstract" content="thaimaan matka 2002" />
 
         <meta name="keywords"
         content="sami, kerola, thaimaa, matkustamine" />
