add more viewport configurations
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/london_pubs.html
+++ b/london_pubs.html
@@ -7,6 +7,7 @@
 "HTML Tidy for Linux/x86 (vers 25 March 2009), see www.w3.org" />
 <meta http-equiv="Content-Type" content=
 "text/html; charset=us-ascii" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Sami Kerola" />
 <meta name="classification" content="personal home page" />
 <meta name="contact_addr" content="kerolasa@iki.fi" />
