--- a/amsterdam_pubs.html
+++ b/amsterdam_pubs.html
@@ -8,6 +8,7 @@
   "HTML Tidy for Linux (vers 25 March 2009), see www.w3.org" />
   <meta http-equiv="Content-Type" content=
   "text/html; charset=us-ascii" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Sami Kerola" />
   <meta name="classification" content="personal home page" />
   <meta name="contact_addr" content="kerolasa@iki.fi" />
