add pubs to london list
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/london_pubs.html
+++ b/london_pubs.html
@@ -48,34 +48,62 @@ SE1 9AG</p>
 The Kernel Brewery<br />
 Unit 11, Dockley Road Industrial Estate<br />
 SE16 3SF</p>
+<p>Close by Tottenham court station<br />
+Craft Beer - Covent Garden<br />
+168 High Holborn<br />
+WC1V 7AA</p>
 <p>Close by Farringdon station<br />
-Craft Beer<br />
+Craft Beer - Clerkenwell<br />
 82 Leather Lane<br />
 EC1N 7TR</p>
+<p>Close by Angel station<br />
+Craft Beer - Islington<br />
+55 White Lion Street<br />
+N1 9PP</p>
 <p>Close by Farringdon station<br />
 Jerusalem Tavern<br />
 55 Briton Street<br />
 EC1M 5NA</p>
+<p>Close by Farringdon station<br />
+Dovetail<br />
+9 Jerusalem Passage<br />
+EC1V 4JP</p>
 <p>Not far from Paddington station<br />
 Victoria (Fuller's)<br />
 10 Strathearn Place<br />
 W2 2NH</p>
-<p>Not far from Parsons Green tube station<br />
-Octoberfest Pub<br />
-678-680 Fulham Road<br />
-SW6 5SA</p>
 <p>Quite close Angel station<br />
 Craft Beer<br />
 55 White Lion Street<br />
 N1 9PP</p>
-<p>Not near anything, reachable from Old Street tube station<br />
-Wenlock Arms<br />
-26 Wenlock Road<br />
-N1 7TA</p>
+<p>In between Pimlico and Victoria stations<br />
+CASK Pub & Kitchen<br />
+6 Charlwood Street<br />
+SW1V 2EE</p>
+Close to Shepherds bushmarket tube station<br />
+BrewDog Shepherds Bush<br />
+15-19 Goldhawk Road<br />
+W12 8QQ</p>
+Close to Hammersmith tube station<br />
+Draft House Hammersmith<br />
+238 Shepherds Bush Road<br />
+W6 7NL</p>
+<p>Across street Parson's green tube station<br />
+White Horse on Parson's Green<br />
+1-3 Parson's Green<br />
+SW6 4UL</p>
+<p>Not far from Parsons Green tube station<br />
+Octoberfest Pub<br />
+678-680 Fulham Road<br />
+SW6 5SA</p>
 <p>At Stoke Newington<br />
 The Jolly Butchers<br />
 204 Stoke Newington High Street<br />
 N16 7HU</p>
+<p>In hart of Hackney<br />
+Cock Tavern<br />
+315 Mare Street<br />
+E8 1EJ</p>
 <h2>Beer stores</h2>
 <p>South bank near London bridge<br />
 Utobeer Market Stall<br />
