--- a/second.html
+++ b/second.html
@@ -35,6 +35,7 @@
   <p><a href="thaimaa.html">Thaimaan lomamatka</a><br />
   <a href="matka2003.html">Autoloma it&auml;euroopassa</a><br />
   <a href="matka2004/">Mukamatkojen oopperamatka</a><br />
+  <a href="matkatavaralista.txt">Matkatavaramuistilista</a><br />
   <a href="matti.html">Matti Nyk&auml;nen - El&auml;m&auml; on
   laiffia</a><br />
   <a href="falafel.html">Falafel</a><br />
