Monday will be my first day at CloudFlare
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -36,6 +36,35 @@ P.buttons A.vcs{background-position:0px -116px;}</style>
 </head>
 <body>
 <section itemscope itemtype="http://schema.org/Person">
+<p class="where">Work</p>
+<p class="justtext">address<br/></p>
+<p class="address">
+<span itemprop="worksFor" itemscope
+itemtype="http://schema.org/Organization">
+<span itemprop="name">CloudFlare</span><br/>
+Sami Kerola<br/>
+<span itemprop="address" itemscope
+itemtype="http://schema.org/PostalAddress">
+<span itemprop="streetAddress">20 Birchin Court</span><br/>
+<span itemprop="addressLocality">London</span><br/>
+<span itemprop="postalCode">EC3V 9DU</span><br/>
+<span itemprop="addressCountry">United Kingdom</span></p>
+</span>
+<div class="justtext">
+<table border="0" cellspacing="2" cellpadding="0" summary="work">
+<tr>
+<td>email</td>
+<td class="pad"><a href="mailto:kerolasa@cloudflare.com"
+itemprop="email">kerolasa@cloudflare.com</a></td>
+</tr>
+<tr>
+<td>web page</td>
+<td class="pad"><a href="https://www.cloudflare.com/"
+itemprop="url">https://www.cloudflare.com/</a></td>
+</tr>
+</span>
+</table>
+</div>
 <p class="where">Home</p>
 <p class="justtext">address<br/></p>
 <p class="address"><span itemprop="name">Sami Kerola</span><br/>
