--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@ itemtype="http://schema.org/PostalAddress">
 itemprop="email">kerolasa@cloudflare.com</a></td>
 </tr>
 <tr>
+<td>mobile</td>
+<td class="pad"><a href="tel:+447795344427" itemprop="telephone">+44 779 5344 427</a></td>
+</tr>
+<tr>
 <td>web page</td>
 <td class="pad"><a href="https://www.cloudflare.com/"
 itemprop="url">https://www.cloudflare.com/</a></td>
