CloudFlare London office moved
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@ itemtype="http://schema.org/Organization">
 Sami Kerola<br/>
 <span itemprop="address" itemscope
 itemtype="http://schema.org/PostalAddress">
-<span itemprop="streetAddress">20 Birchin Court</span><br/>
+<span itemprop="streetAddress">25 Lavington Street, 3rd floor</span><br/>
 <span itemprop="addressLocality">London</span><br/>
-<span itemprop="postalCode">EC3V 9DU</span><br/>
+<span itemprop="postalCode">SE1 0NA</span><br/>
 <span itemprop="addressCountry">United Kingdom</span></p>
 </span>
 <div class="justtext">
