correct CloudFlare office floor
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ itemtype="http://schema.org/Organization">
 Sami Kerola<br/>
 <span itemprop="address" itemscope
 itemtype="http://schema.org/PostalAddress">
-<span itemprop="streetAddress">25 Lavington Street, 3rd floor</span><br/>
+<span itemprop="streetAddress">25 Lavington Street, 2nd floor</span><br/>
 <span itemprop="addressLocality">London</span><br/>
 <span itemprop="postalCode">SE1 0NA</span><br/>
 <span itemprop="addressCountry">United Kingdom</span></p>
