webpages: make pages mobile device friendly
Use css max-width instead of width this permits narrow screen to wrap lines.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/defunct.html
+++ b/defunct.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <style xml:space="preserve" type="text/css">/**/ BODY {
-        background-color : #ffffff; margin : 10px; width : 520px; }
+        background-color : #ffffff; margin : 10px; max-width: 700px; }
         /**/</style>
         <title>How can I kill a defunct process</title>
     </head>
