--- a/load.html
+++ b/load.html
@@ -7,17 +7,17 @@
 BODY {
    background-color : #ffffff; 
    margin : 10px; 
-   width : 520px; 
+   max-width: 700px; 
 }
 
 P.bread {
    margin-left : 50px;
-   width : 520px;
+   max-width: 700px;
 }
 
 OL.bread {
    margin-left : 30px;
-   width : 520px;
+   max-width: 700px;
 }
 
 P.title {
