--- a/thaimaa.html
+++ b/thaimaa.html
@@ -37,7 +37,7 @@
 <style xml:space="preserve" type="text/css">
 BODY {
    margin : 10px; 
-   width : 520px; 
+   max-width: 700px; 
 }
 </style>
 
