measurements: add info what size fits for me
I'm tired of trying to find right size clothes without a hint
what size I am, so do all of them to make the process easier.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/second.html
+++ b/second.html
@@ -41,7 +41,8 @@
   <a href="falafel.html">Falafel</a><br />
   <a href="lettu.html">Perunalettu</a><br />
   <a href="lp.html">Lastensuojelua ja sensuuria</a><br />
-  <a href="lasagna.html">Lasagna recipe</a></p>
+  <a href="lasagna.html">Lasagna recipe</a><br />
+  <a href="measurements.html">My measurements to make buying clothes easier</a></p>
 
   <p><a href="differences.html">Mitigating the Obfuscation
   Circumscribing the Three Primary Unix Shells</a><br />
