measurements: correct inside leg length
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/measurements.html
+++ b/measurements.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="classification" content="personal home page">
 <meta name="contact_addr" content="kerolasa@iki.fi">
 <meta name="language" content="en">
@@ -26,7 +27,7 @@
 <tr><td>G</td><td>neck size</td><td>44</td><td>17.3</td></tr>
 <tr><td>H</td><td>sleeve</td><td>62</td><td>24.4</td></tr>
 <tr><td>K-M</td><td>outside leg</td><td>109</td><td>42.9</td></tr>
-<tr><td>L-M</td><td>inside leg</td><td>73</td><td>28.7</td></tr>
+<tr><td>L-M</td><td>inside leg</td><td>78</td><td>30.7</td></tr>
 <tr><td>M</td><td>knee</td><td>9</td><td>3.5</td></tr>
 <tr><td>N</td><td>wrist</td><td>18</td><td>7.0</td></tr>
 <tr><td>O</td><td>upper arm</td><td>27</td><td>10.6</td></tr>
