add Mother Kellys to London pubs
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/london_pubs.html
+++ b/london_pubs.html
@@ -104,6 +104,10 @@ N16 7HU</p>
 Cock Tavern<br />
 315 Mare Street<br />
 E8 1EJ</p>
+<p>Very close to Bethnal Green tube station<br />
+Mother Kelly's<br />
+251 Paradise Row<br />
+E2 9LE</p>
 <h2>Beer stores</h2>
 <p>South bank near London bridge<br />
 Utobeer Market Stall<br />
