add Bermondsey Beer Mile as a separate section
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/london_pubs.html
+++ b/london_pubs.html
@@ -45,10 +45,6 @@ NW1 2EF</p>
 Rake<br />
 14 Winchester Walk<br />
 SE1 9AG</p>
-<p>Not far off Bermondsey tube station. Notice, open only at Saturdays.<br />
-The Kernel Brewery<br />
-Unit 11, Dockley Road Industrial Estate<br />
-SE16 3SF</p>
 <p>Close by Tottenham court station<br />
 Craft Beer - Covent Garden<br />
 168 High Holborn<br />
@@ -109,7 +105,40 @@ E8 1EJ</p>
 Mother Kelly's<br />
 251 Paradise Row<br />
 E2 9LE</p>
-<h2>Beer stores</h2>
+<h2>Bermondsey Beer Mile</h2>
+<p>The Bermondsey is district in London east from Tower Bridge, and
+for some reason a many microbreweries are brewing there. Most of
+these breweries are open to visit only at Saturdays, and that is
+the recommended day to do the Beer Mile crawl. Following listing
+assumes you start from east and move to west.</p>
+<p>Fourpure<br />
+Rotherhithe New Road<br />
+SE16 3LL</p>
+<p>Eebria<br />
+15 Almond Road<br />
+SE16 3LR</p>
+<p>Partizan Brewing<br />
+8 Almond Road<br />
+SE16 3LR</p>
+<p>Kernel Brewery<br />
+Unit 11, Dockley Road<br />
+SE16 3SF</p>
+<p>Brewed by numbers<br />
+79 Enid Street<br />
+SE16 3RA</p>
+<p>Ubrew<br />
+24 Old Jamaica Road<br />
+SE16 4AW</p>
+<p>The Bottle Shop<br />
+128 Druid Street<br />
+SE1 2HH</p>
+<p>Anspach &amp; Hobday<br />
+118 Druid Street<br />
+SE1 2HH</p>
+<p>Southwark Brewing<br />
+46 Druid Street<br />
+SE1 2EZ</p>
+<h2>Bottle shops</h2>
 <p>South bank near London bridge<br />
 Utobeer Market Stall<br />
 Borough Market<br />
