add few bottle shops
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/london_pubs.html
+++ b/london_pubs.html
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="us-ascii"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -139,9 +138,21 @@ SE1 2HH</p>
 46 Druid Street<br />
 SE1 2EZ</p>
 <h2>Bottle shops</h2>
+<p>Five minute walk from Chancery Lane tube statation<br />
+BottleDog<br />
+69 Gray's Inn Road<br />
+WC1X 8TR</p>
 <p>South bank near London bridge<br />
 Utobeer Market Stall<br />
 Borough Market<br />
 SE1 1TL</p>
+<p>Close by Putney bridge<br />
+Drink of Fulham<br />
+349 Fulham Palace Road<br />
+SW6 6TB</p>
+<p>By East Putney tube station<br />
+The Beer Boutique<br />
+134 Upper Richmond Road<br />
+SW15 2SP</p>
 </body>
 </html>
