add google map link to london pubs
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/london_pubs.html
+++ b/london_pubs.html
@@ -27,10 +27,9 @@
 </head>
 <body>
 <h1>London pub recommendations</h1>
-<p>The list is not complete, because I have not had yet time to
-visit all potentially great pubs in London, which have a reputation
-being worthwhile to visit. That in mind here comes the list so
-far.</p>
+<p>If the list below feels difficult to use consider seeing locations from a
+<a href="https://www.google.com/maps/d/edit?mid=zbGTR-VnidrI.ku9RRy0kZqvI&amp;usp=sharing">
+google map</a>.</p>
 <h2>The pubs.</h2>
 <p>Just round corner to Trafalgar Square<br />
 The Harp<br />
@@ -68,10 +67,6 @@ EC1V 4JP</p>
 Victoria (Fuller's)<br />
 10 Strathearn Place<br />
 W2 2NH</p>
-<p>Quite close Angel station<br />
-Craft Beer<br />
-55 White Lion Street<br />
-N1 9PP</p>
 <p>In between Pimlico and Victoria stations<br />
 CASK Pub &amp; Kitchen<br />
 6 Charlwood Street<br />
