move from Shepherd's Bush to Clapham Common
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@ itemprop="url">https://www.cloudflare.com/</a></td>
 <p class="justtext">address<br/></p>
 <p class="address"><span itemprop="name">Sami Kerola</span><br/>
 <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-<span itemprop="streetAddress">95 Ormiston Grove</span><br/>
+<span itemprop="streetAddress">Flat 4, Clarion House<br/>
+70 Park Hill</span><br/>
 <span itemprop="addresslocality">London</span><br/>
-<span itemprop="postalCode">W12 0JP</span><br/>
+<span itemprop="postalCode">SW4 9PB</span><br/>
 <span itemprop="addressCountry">United Kingdom</span></p>
 </span>
 <div class="justtext">
