london pubs: fix couple typos
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/london_pubs.html
+++ b/london_pubs.html
@@ -69,7 +69,7 @@ EC1V 4JP</p>
 CASK Pub &amp; Kitchen<br />
 6 Charlwood Street<br />
 SW1V 2EE</p>
-<p>Close to Shepherds bushmarket tube station<br />
+<p>Close to Shepherd's bush market tube station<br />
 BrewDog Shepherds Bush<br />
 15-19 Goldhawk Road<br />
 W12 8QQ</p>
@@ -144,7 +144,7 @@ NW5 2TH</p>
 Kris Wines<br />
 394 York Way<br />
 N7 9LW</p>
-<p>Five minute walk from Chancery Lane tube statation<br />
+<p>Five minute walk from Chancery Lane tube station<br />
 BottleDog<br />
 69 Gray's Inn Road<br />
 WC1X 8TR</p>
@@ -164,7 +164,7 @@ SW15 2SP</p>
 Fuller's Brewery Shop<br />
 Chiswick Lane South<br />
 W4 2QB</p>
-<h2>Beatyful Pubs</h2>
+<h2>Beautiful Pubs</h2>
 <p>The places in this list do not have special beer selection, but
 the pubs themselves are such unique that they should be visited.
 You can expect to find somewhat old but absolutely stunning
@@ -181,7 +181,7 @@ NW3 7JJ</p>
 Ye Olde Cheshire Cheese<br />
 145 Fleet Street<br />
 EC4A 2BU</p>
-<p>By Chancery Lane tube statation<br />
+<p>By Chancery Lane tube station<br />
 Cittie of Yorke<br />
 22 High Holborn<br />
 WC1V 6BN</p>
