london pubs: add We Brought Beer shop
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/london_pubs.html
+++ b/london_pubs.html
@@ -160,6 +160,10 @@ SW6 6TB</p>
 The Beer Boutique<br />
 134 Upper Richmond Road<br />
 SW15 2SP</p>
+<p>Not far from Clapham Junction railway station<br />
+We Brought Beer<br />
+78 St John's Hill<br />
+SW11 1SF</p>
 <p>Down by Thames from Stamford brook tube station<br />
 Fuller's Brewery Shop<br />
 Chiswick Lane South<br />
