rebranding: CloudFlare -> Cloudflare
Reference: https://blog.cloudflare.com/time-for-an-update/
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ P.buttons A.vcs{background-position:0px -116px;}</style>
 <p class="address">
 <span itemprop="worksFor" itemscope
 itemtype="http://schema.org/Organization">
-<span itemprop="name">CloudFlare</span><br/>
+<span itemprop="name">Cloudflare</span><br/>
 Sami Kerola<br/>
 <span itemprop="address" itemscope
 itemtype="http://schema.org/PostalAddress">
